testing a fix for the behaviour of the layout with the  svg when zooming in on mobile

--- a/src/components/PageContainer/PageContainer.styles.css
+++ b/src/components/PageContainer/PageContainer.styles.css
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     width: 100vw;
+    position: absolute;
     min-height: var(--content-full-page);
     margin-top: var(--header-mobile-height);
   }
